--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,19 @@ h1{
   color:#355C7D;
 }
 
+h2{
+  font-family:AppleGothic;
+  font-size:18px;
+  color:#F8B195;
+}
+
 p.intro {
   font-family:DINPro;
   font-size:15px;
   color:#444649;
 }
 
-#explore {
+p {
   font-family:DINPro;
   font-size:15px;
   color: #355C7D;
@@ -34,6 +40,7 @@ select {
     left: 400px;
     height: 100%;
     top: 0;
+    z-index:1;
 }
 
 .sidebar {
@@ -47,13 +54,51 @@ select {
     font-size: 16px;
 }
 
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+.next {
+  position:absolute;
+  right:0;
+  border-radius: 3px 0 0 3px;
+  z-index:2;
+}
+
+.prev {
+  position:absolute;
+  left: 400px;
+  border-radius: 3px 0 0 3px;
+  z-index:2;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+#s1{
+  float:right;
+}
+
 button {
+    display:block;
     background-color: #F8B195;
     border: none;
     color: #355C7D;
     text-decoration: none;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 10px 0px;
     cursor: pointer;
     font-family: DINPro;
 }
